--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>Willkommen zu unserem Rechtsschutzversicherungsrechner</h1>
     </header>
+    <div class="background"></div>
+
+    <div class="overlay"></div>
+    
+    <div class="welcome-text">Herzlich willkommen bei Right</div>
     <main>
-        <section class="intro">
-            <h2>Berechnen Sie Ihre Rechtsschutzversicherung schnell und einfach</h2>
-            <p>Mit unserem Rechner können Sie Ihre Rechtsschutzversicherungsprämie in wenigen Schritten berechnen. Geben Sie einfach Ihre Daten ein und erhalten Sie sofort eine Schätzung der Kosten.</p>
-            <button onclick="location.href='#calculator'">Loslegen</button>
-        </section>
     </main>
     <footer>
-        <p>&copy; 2024 Versicherungsrechner</p>
     </footer>
 </body>
 </html>
