landing page finished

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
     <div class="overlay"></div>
     
-    <div class="welcome-text">Herzlich willkommen bei Right</div>
+    <div class="welcome-container">
+        <div class="welcome-text">Herzlich willkommen bei Right</div>
+        <a href="homepage/home.html" class="welcome-button">Mehr erfahren</a>
+    </div>
     <main>
     </main>
     <footer>
