Zentrieren Problem button und homepage angefangen

--- a/homepage/home.html
+++ b/homepage/home.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home - Rechtsschutzversicherungsrechner</title>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Über uns</a></li>
+                <li><a href="#">Leistungen</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Willkommen bei Ihrem Rechtsschutzversicherungsrechner</h1>
+        <a href="#" class="calculate-button">
+            <span class="button-text">Berechnen Sie Ihre Versicherungskosten</span>
+            <iframe src="https://giphy.com/embed/cG81Mc8Lr9ZcrAhTjU" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        </a>
+    </main>
+    <footer>
+        <p>&copy; 2024 Rechtsschutzversicherungsrechner. Alle Rechte vorbehalten.</p>
+    </footer>
 </body>
 </html>
