home ziemlich fertig

--- a/homepage/home.html
+++ b/homepage/home.html
@@ -20,8 +20,10 @@
     <main>
         <h1>Willkommen bei Ihrem Rechtsschutzversicherungsrechner</h1>
         <a href="#" class="calculate-button">
-            <span class="button-text">Berechnen Sie Ihre Versicherungskosten</span>
-            <iframe src="https://giphy.com/embed/cG81Mc8Lr9ZcrAhTjU" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+            <div class="inner-button">
+                <span class="button-text">Berechnen Sie Ihre Prämie</span>
+                <iframe src="https://giphy.com/embed/cG81Mc8Lr9ZcrAhTjU" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+            </div>
         </a>
     </main>
     <footer>
